# battleship-game

./: .gitignore  README.md  pyproject.toml
legacy/: ExamenFinal.txt  battle_ship_game.py
src/battleship_ai/: ai.py  board.py  cli.py  game.py  render.py  ship.py
tests/: test_ai.py  test_board.py  test_cli.py  test_game.py  test_render.py
