[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "battleship-heuristic-ai"
version = "0.1.0"
description = "A modernized Battleship game with a classical rule-based heuristic AI."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Julio Medina" }
]

[project.scripts]
battleship-ai = "battleship_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
